--- a/src/index.css
+++ b/src/index.css
@@ -196,10 +196,16 @@ a {
   cursor: pointer;
 }
 
-.three {
+/* .three {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 65%);
+} */
+
+.three {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 40%);
 }
 
 .three {
@@ -207,6 +213,7 @@ a {
   border-radius: 15px;
   width: 300px;
   height: 300px;
+  overflow: hidden;
 }
 
 .buttonThree {
@@ -322,7 +329,7 @@ a {
 
   .menu {
     padding-top: 40px;
-    grid-gap: 70px;
+    grid-gap: 50px;
   }
 
   .menu-btn {
@@ -334,8 +341,10 @@ a {
   }
 
   .line {
+    display: flex;
+    justify-content: center;
     width: 500px;
-    padding-top: 10px;
+    padding-top: 30px;
   }
 
   .about-content {
@@ -425,8 +434,8 @@ a {
   }
 
   .three {
-    position: relative;
-    top: 0px;
+    position: absolute;
+    top: 30%;
   }
 
   .three {
@@ -467,7 +476,7 @@ a {
   .header:hover {
     border-radius: 10px;
     background-color: #013745;
-    color: var(--solSpecialText);
+    color: var(--solHighlighted);
   }
 
   .nav:hover {
